--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,6 +6,7 @@
 
 @import "./components/canvas";
 
+@import "./pages/photos";
 @import "./pages/demo";
 @import "./pages/demo-1";
 @import "./pages/demo-2";
